--- a/locales/pl.json
+++ b/locales/pl.json
@@ -1,51 +1,55 @@
 {
-  "nav": {
-    "home": "Start",
-    "about": "O mnie",
-    "skills": "Umiejętności",
-    "projects": "Projekty",
-    "contact": "Kontakt"
-  },
-  "home": {
-    "title-1": "Cześć",
-    "title-2": "Nazywam się Jakub Kret",
-    "subtitle": "Full-stack developer tworzący nowoczesne aplikacje i funkcjonalne doświadczenia cyfrowe, które ułatwiają codzienne życie.",
-    "button": "Moje prace"
-  },
-  "about": {
-    "title": "O mnie",
-    "subtitle-1": "Kim jestem",
-    "text-1": [
-      "Jestem pasjonatem programowania z wyczuciem estetyki i designu. Łączę wiedzę techniczną z kreatywnym myśleniem, tworząc rozwiązania cyfrowe, które naprawdę robią różnicę.", "Uwielbiam rozwijać się w obszarze tworzenia stron internetowych i stale poznawać nowe technologie. Stawiam na czysty, przemyślany kod i wyjątkowe doświadczenia użytkowników.", "Poza programowaniem chętnie odkrywam nowe technologie, współtworzę projekty open source i dzielę się wiedzą z innymi."
-    ],
-    "subtitle-2": "Mode podejście",
-    "text-2": [
-      "Skupienie na użytkowniku: każda decyzja projektowa i techniczna podejmowana jest z myślą o końcowym użytkowniku, by zapewnić intuicyjne i przyjemne doświadczenie.", "Jakość przede wszystkim: wierzę w pisanie kodu, który jest łatwy w utrzymaniu, skalowalny i odporny na upływ czasu.", "Nieustanna nauka: technologia zmienia się błyskawicznie — dlatego stale śledzę nowe trendy i najlepsze praktyki w branży."
-    ],
-    "swipeHint": "Przesuń, aby zobaczyć więcej"
-  },
-  "skills": {
-    "title": "Umiejętności i Specjalizacje"
-  },
-  "projects": {
-    "title": "Wybrane Projekty",
-    "pageBtn": "Pokaż projekt"
-  },
-  "footer": {
-    "rights": "Wszelkie prawa zastrzeżone."
-  },
-  "contact": {
-    "title": "Skontaktuj się ze mną",
-    "subtitle": "Masz projekt w głowie? Pogadajmy o nim!",
-    "button": "Wyślij wiadomość",
-    "labelName": "Imię i nazwisko",
-    "labelSubject": "Temat",
-    "labelMessage": "Wiadomość",
-    "messagePlaceholder": "Wpisz swoją wiadomość...",
-    "modalMessage": "Thank you for reaching out. I'll get back to you as soon as possible.",
-    "belowForm-1": "Lokalizacja",
-    "belowForm-1-1": "Warszawa, Polska",
-    "belowForm-2": "Czas odpowiedzi",
-    "belowForm-2-2": "godzin"
-  }
+	"nav": {
+		"home": "Start",
+		"about": "O mnie",
+		"skills": "Umiejętności",
+		"projects": "Projekty",
+		"contact": "Kontakt"
+	},
+	"home": {
+		"title-1": "Cześć",
+		"title-2": "Nazywam się Jakub Kret",
+		"subtitle": "Full-stack developer tworzący nowoczesne aplikacje i funkcjonalne doświadczenia cyfrowe, które ułatwiają codzienne życie.",
+		"button": "Moje prace"
+	},
+	"about": {
+		"title": "O mnie",
+		"subtitle-1": "Kim jestem",
+		"text-1": [
+			"Jestem pasjonatem programowania z wyczuciem estetyki i designu. Łączę wiedzę techniczną z kreatywnym myśleniem, tworząc rozwiązania cyfrowe, które naprawdę robią różnicę.",
+			"Uwielbiam rozwijać się w obszarze tworzenia stron internetowych i stale poznawać nowe technologie. Stawiam na czysty, przemyślany kod i wyjątkowe doświadczenia użytkowników.",
+			"Poza programowaniem chętnie odkrywam nowe technologie, współtworzę projekty open source i dzielę się wiedzą z innymi."
+		],
+		"subtitle-2": "Mode podejście",
+		"text-2": [
+			"Skupienie na użytkowniku: każda decyzja projektowa i techniczna podejmowana jest z myślą o końcowym użytkowniku, by zapewnić intuicyjne i przyjemne doświadczenie.",
+			"Jakość przede wszystkim: wierzę w pisanie kodu, który jest łatwy w utrzymaniu, skalowalny i odporny na upływ czasu.",
+			"Nieustanna nauka: technologia zmienia się błyskawicznie — dlatego stale śledzę nowe trendy i najlepsze praktyki w branży."
+		],
+		"swipeHint": "Przesuń, aby zobaczyć więcej"
+	},
+	"skills": {
+		"title": "Umiejętności i Specjalizacje"
+	},
+	"projects": {
+		"title": "Wybrane Projekty",
+		"pageBtn": "Pokaż projekt"
+	},
+	"footer": {
+		"rights": "Wszelkie prawa zastrzeżone."
+	},
+	"contact": {
+		"title": "Skontaktuj się ze mną",
+		"subtitle": "Masz projekt w głowie? Pogadajmy o nim!",
+		"button": "Wyślij wiadomość",
+		"labelName": "Imię i nazwisko",
+		"labelSubject": "Temat",
+		"labelMessage": "Wiadomość",
+		"messagePlaceholder": "Wpisz swoją wiadomość...",
+		"modalMessage": "Thank you for reaching out. I'll get back to you as soon as possible.",
+		"belowForm-1": "Lokalizacja",
+		"belowForm-1-1": "Warszawa, Polska",
+		"belowForm-2": "Czas odpowiedzi",
+		"belowForm-2-2": "godzin"
+	}
 }
